fix close btn z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,9 @@ animation: animating 8s linear infinite;
 
 
 
-
+.closelogin{
+  z-index: 100;
+}
 
 
 
